# NNIE-lite

./: .gitattributes  CMakeLists.txt  LICENSE  README.md
Converter/ENet/: RUNTIME.txt  gen_img_abs_path_list.sh  model_inst.cfg
Converter/ENet/caffe_model/: bn_conv_merged_model.prototxt  bn_conv_merged_weights.caffemodel
examples/: GeneralCls.cpp  GeneralCls.h  GeneralSeg.cpp  GeneralSeg.h  yolo.cpp
inc/: Net.hpp  nnie_core.h  sample_comm.h  sample_comm_nnie.h  sample_comm_svp.h  util.h
release/: Seg_Exe
release/data/nnie_model/mnist/: inst_mnist_cycle.wk
release/data/nnie_model/segmentation/: ENet_cityscapes.wk
src/: Net.cpp  nnie_core.c  sample_comm_nnie.c  sample_comm_svp.c
